fixed header and navbar spacing and sizing. All pages should be consistent in regard to header and navbar.

--- a/mealpage/style/mealpagestyle.css
+++ b/mealpage/style/mealpagestyle.css
@@ -63,7 +63,7 @@
 }
 
 .container {
-    height: 19%;
+    height: 10%;
     position: relative;
     text-align: center;
     color: #363535;
@@ -98,16 +98,16 @@
 
 .back_image {
     width: 100%;
-    height: 9%;
-    
+    height: 100%;
     opacity: 0.3;
+    margin-bottom: 10px;
     color: white;
 }
 .scroll {
-    height: 81%;
+    height: 80.5%;
     width: 100%;
     background-color: white;
-    margin-bottom: 80px;
+    margin-bottom: 5px;
     font-family: 'Oswald';
     color: #363535;
     
